@@ -55,6 +55,7 @@ th a { color: black; font-weight: bold; display: block; width: 100%; height: 100
 .lineNoCov { background-color: #ffe0e0; }
 pre.code {
 	font-family: monospace;
+	font-size: 12px;
 	white-space: pre;
 	border: 1px solid gray;
 }
